# Sleeping-creators

./: .dockerignore  .gitignore  Dockerfile  PLAN-leads-system.md  PRD-new-features.md  PROJECT_SUMMARY.txt  SETUP_PROMPT.md  SMOKE_TESTS.md  design_guidelines.json  docker-compose.coolify.yml  docker-compose.yml  how-content-is-generated.txt  netlify.toml  render.yaml  requirements.md  setup-claude-skills.sh
admin/: index.html  package-lock.json  package.json
backend_mobile/: config.py  database.py  main.py  pyproject.toml  requirements.txt
backend_mobile/modules/admin/: indexes.py  router.py
backend_mobile/modules/analytics/: router.py
backend_mobile/modules/creator/: models.py  router.py  schemas.py  service.py
backend_mobile/modules/iam/: compat_router.py  models.py  router.py  schemas.py  service.py
backend_mobile/modules/intelligence/: ingestion_jobs.py  models.py  performance_ingestor.py  reel_analyzer.py  router.py  schemas.py  seed_hooks.py  service.py
backend_mobile/modules/intelligence/graphs/: content_generation.py  content_plan.py  state.py
backend_mobile/modules/intelligence/prompts/: carousel_strategist.py
backend_mobile/modules/notifications/: fcm.py
backend_mobile/modules/posts/: carousel_router.py  r2_client.py  router.py  shotstack_service.py  slide_renderer.py  video_render.py  video_router.py
backend_mobile/modules/publishing/: bundle_service.py  router.py
backend_mobile/modules/studio/: compat_router.py  models.py  router.py  schemas.py  service.py
backend_mobile/shared/: dependencies.py  events.py  exceptions.py  types.py
(+363 files in other folders)
