[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sleeping-creators-mobile"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = [".."]
include = ["backend_mobile*"]

[tool.setuptools.package-dir]
"" = ".."
